--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.item-style {
+  list-style: none;
+  border: 1px solid gray;
+  width: 50px;
+  margin-bottom: 5px;
+}
